plugins {
    id 'java'
}

group 'ro.bitgloss'
version '1.0-SNAPSHOT'

sourceCompatibility = JavaVersion.VERSION_16

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    test.useJUnitPlatform()
    testImplementation("org.junit.jupiter:junit-jupiter-api:5.7.1")
    testImplementation("org.mockito:mockito-core:2.27.0")

    testRuntimeOnly("org.junit.platform:junit-platform-launcher:1.4.2")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.7.1")
    testRuntimeOnly("org.junit.vintage:junit-vintage-engine:5.7.1")

    implementation('com.github.dannicolici:io:1.0.2-release')
    implementation('com.sparkjava:spark-core:2.9.2')
}

tasks.withType(JavaCompile) {
    options.compilerArgs += ['--enable-preview']
}

test {
    jvmArgs(['--enable-preview'])
}